# md-mcp

./: .gitignore  BUILD_SUMMARY.md  CHUNKING_IMPLEMENTATION.md  DEVELOPMENT.md  IMPROVEMENTS_ROADMAP.md  LICENSE  MIGRATION.md  QUICK_TEST.md  README.md  REFACTOR_COMPLETE.txt  REFACTOR_NOTES.md  STRATEGY_PARAMETER.md  UV_REFACTOR_SUMMARY.md  pyproject.toml  requirements.txt  test_chunking.py  test_chunking_simple.py  test_file_watching.py  test_install.ps1  test_read_file.py  test_semantic.py  test_strategy_param.py
.github/workflows/: ci.yml
archive/: CHANGES_v1.0.3.md  QUICKSTART.md  REVIEW_CHECKLIST.md  STRATEGY_UPDATE_SUMMARY.txt
demo/demo-notes-gui/: docker-compose.md  git-workflow.md  python-tips.md
md_mcp/: __init__.py  __main__.py  chunking.py  config.py  scanner.py  semantic.py  server.py  server_runner.py
md_mcp/web/: __init__.py  app.py
md_mcp/web/templates/: index.html
pypi-build/: .env.template  README.md  build.sh  bump-version.sh  clean.sh  config.sh  deploy-prod.sh  deploy-test.sh  verify-install.sh
test-samples/: api-reference.md  getting-started.md
test-samples/examples/: obsidian-vault.md
test-samples/tutorials/: basic-usage.md
