[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-mcp"
version = "0.2.0"
description = "Instantly expose markdown folders as MCP servers for Claude Desktop"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Yang Li", email = "victorlee2012.vl@gmail.com"}
]
keywords = ["mcp", "markdown", "claude", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp[cli]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
md-mcp = "md_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ly2xxx/md-mcp"
Repository = "https://github.com/ly2xxx/md-mcp.git"
Issues = "https://github.com/ly2xxx/md-mcp/issues"

[tool.setuptools]
packages = ["md_mcp"]
