[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-mcp"
version = "0.4.0"
description = "Instantly expose markdown folders as MCP servers for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Yang Li", email = "victorlee2012.vl@gmail.com"}
]
keywords = ["mcp", "markdown", "claude", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
md-mcp = "md_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ly2xxx/md-mcp"
Repository = "https://github.com/ly2xxx/md-mcp.git"
Issues = "https://github.com/ly2xxx/md-mcp/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.15.4",
]

[tool.hatchling.build.targets.wheel]
packages = ["md_mcp"]
