[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-mcp"
version = "1.0.4"
description = "Instantly expose markdown folders as MCP servers for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Yang Li", email = "victorlee2012.vl@gmail.com"}
]
keywords = ["mcp", "markdown", "claude", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp>=0.1.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
md-mcp = "md_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ly2xxx/md-mcp"
Repository = "https://github.com/ly2xxx/md-mcp.git"
Issues = "https://github.com/ly2xxx/md-mcp/issues"

[tool.setuptools.packages.find]
include = ["md_mcp*"]

[tool.setuptools.package-data]
"md_mcp.web" = ["templates/*"]
